--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,7 @@ font-family: 'Poppins';
         display: flex;
         flex-direction: column;
         align-items: center;
+        cursor: pointer;
     }
 }
 
